Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="angular-esri-map-toc" class="anchor" href="#angular-esri-map-toc" aria-hidden="true"><span class="octicon octicon-link"></span></a>angular-esri-map-toc</h1>
 
-<p>A table of contents directive for use as a plugin to the <a href="https://github.com/Esri/angular-esri-map">https://github.com/Esri/angular-esri-map</a> library.</p>
+<p>A table of contents directive for use as a plugin to the <a href="https://github.com/Esri/angular-esri-map">angular-esri-map</a> library.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Kollibri/angular-esri-map-toc">angular-esri-map-toc</a> is maintained by <a href="https://github.com/Kollibri">Kollibri</a>.</span>
