--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">angular-esri-map-toc</h1>
-      <h2 class="project-tagline">A table of contents directive for use as a plugin to the angular-seri-map-toc library.</h2>
+      <h2 class="project-tagline">A table of contents directive for use as a plugin to the angular-esri-map-toc library.</h2>
       <a href="https://github.com/Kollibri/angular-esri-map-toc" class="btn">View on GitHub</a>
       <a href="https://github.com/Kollibri/angular-esri-map-toc/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Kollibri/angular-esri-map-toc/tarball/master" class="btn">Download .tar.gz</a>
